--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -46,6 +46,7 @@ contact;Contact;Kontakt
 create;Create;Tilføj
 createAccount;Create account;Opret konto
 created;Created;Tilføjet
+brown;Brown;Brun
 createdAt;Created at;Tilføjet den
 createNewCategory;Create new category;Opret ny kategori
 createNewProduct;Create new product;Opret nyt produkt
