--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -2,6 +2,7 @@
 about;About;Profil
 account;Account;Konto
 actionNotAllowedForAdmin;Admin cannot be deleted;Denne handling er ikke tilladt for administrator
+add;Add;Tilføj
 additionalInfo;Additional info;Supplerende information
 addToStock;Add to stock;Tilføj til lager
 admin;Admin;Admin
