--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -10,15 +10,9 @@ allowedFormats;Allowed formats;Tilladte formater
 asc;ascending;stigende
 bag;Bag;Indkøbskurv
 black;Black;Sort
-grey;Grey;Grå
-white;White;Hvid
 blue;Blue;Blå
-yellow;Yellow;Gul
-orange;Orange;Orange
-red;Red;Rød
-purple;Purple;Lilla
-multiColor;MultiColor;Flerfarvet
 brand;Brand;Mærke
+brown;Brown;Brun
 browseImages;Browse images;Vælg produkt billeder
 calendar;Calendar;Kalender
 cancel;Cancel;Annuller
@@ -31,7 +25,7 @@ categoryDeleted;Category deleted;Kategori blev slettet
 categoryIs;Category is;Kategori er
 categoryList;Category list;Kategori-liste
 categoryName;Category name;Kategori navn
-categoryNotFound;Category not found;Kategori findes ikke
+categoryNotFound;Category not found;Kategorien findes ikke
 categoryStatus;Category status;Kategori status
 categoryUpdated;Category updated;Kategori opdateret
 circelChevronRight;Circel chevronRight;Circel chevronRight
@@ -47,7 +41,6 @@ contact;Contact;Kontakt
 create;Create;Tilføj
 createAccount;Create account;Opret konto
 created;Created;Tilføjet
-brown;Brown;Brun
 createdAt;Created at;Tilføjet den
 createNewCategory;Create new category;Opret ny kategori
 createNewProduct;Create new product;Opret nyt produkt
@@ -86,6 +79,7 @@ filtersApplied;Filters applied;Filtre anvendt
 globe;Globe;Globus
 goBack;Go back;Gå tilbage
 goToContent;Go to content;Gå til indhold
+grey;Grey;Grå
 grid;Grid;Grid
 gridLarge; Large grid;Bredt grid
 gridSmall; Small grid;Smalt grid
@@ -113,6 +107,7 @@ main;Main;Primær
 material;Material;Materiale
 menu;Menu;Menu
 minLength;At least 8 characters;Mindst 8 tegn
+multiColor;MultiColor;Flerfarvet
 mustHaveLowercase;At least one lowercase letter;Mindst ét lille bogstav
 mustHaveNumber;At least one number;Mindst ét tal
 mustHaveSymbol;At least one special character;Mindst ét specialtegn
@@ -132,6 +127,7 @@ notAuthorizedNoToken;Not authorized, no token;Ikke autoriseret, ingen token
 notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mislykkedes
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
+orange;Orange;Orange
 orders;Orders;Ordrer
 parentCategory;Parent category;Hovedkategori
 parentCategoryIs;Parent category is;Hovedkategori er
@@ -154,10 +150,12 @@ pleaseSelectParentCategory;Please select parent category;Vælg venligst hovedkat
 preferences;Preferences;Præferencer
 price;Price;Pris
 pricing;Pricing;Prissætning
+productDeleted;Product deleted;Produkt blev slettet
 productImages;Product images;Produkt billeder
 productInformation;Product information;Produkt oplysninger
 productList;Product list;Produktliste
 productName;Product name;Produkt navn
+productNotFound;Product not found;Produktet findes ikke
 productQuantity;Product quantity;Produkt antal
 products;Products;Produkter
 productStatus;Product status;Produkt status
@@ -167,7 +165,9 @@ publish;Publish;Udgiv
 publishDate;Publish date;Udgivelsesdato
 published;Published;Udgivet
 publishTime;Publish time;Udgivelsestidspunkt
+purple;Purple;Lilla
 qty;Qty;Antal
+red;Red;Rød
 resetFiltersAndSorting;Reset filters and sorting;Nulstil filtre og sortering
 retry;Retry;Forsøg igen
 role;Role;Rolle
@@ -217,3 +217,5 @@ viewCategory;View category;Se kategori
 viewProduct;View product;Se produkt
 warning;Warning;Warning
 welcome;Welcome;Velkommen
+white;White;Hvid
+yellow;Yellow;Gul
