--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -117,6 +117,7 @@ myBag;My bag;Min indkøbskurv
 myOrders;My orders;Mine ordrer
 name;Name;Navn
 newCategoryCreated;New category created;Ny kategori blev oprettet
+newPrice;New price;Ny pris
 noData;No data found;Ingen data fundet
 noEmail;Please enter an email;Indtast venligst en e-mail
 noOptions;No optionsl;Ingen valgmuligheder
