--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -196,6 +196,7 @@ search;Search;Søg
 selectPreferences;Select preferred language and currency;Vælg venligst sprog og valuta
 shopNow;Shop now;Køb nu
 showPassword;Show password;Vis adgangskode
+showPrice;Show price;Vis pris
 signup;Sign up;Opret bruger
 signupFailed;Sign up failed;Registrering mislykkedes
 signupSucceeded;Sign up succeeded;Registrering lykkedes
