--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -102,6 +102,7 @@ inactive;Inactive;Inaktiv
 invalidPassword;Invalid password;Ugyldig adgangskode
 invalidScheduledDateFormat;Invalid scheduled date format;Ugyldigt format for planlagt dato
 invalidUserData;Invalid user data;Ugyldig bruger data
+copy;Copy;Kopi
 language;Language;Sprog
 language;Language;Sprog
 loading;Loading;Loading
