--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -164,6 +164,7 @@ preferences;Preferences;Præferencer
 price;Price;Pris
 priceRequired;Please insert price;Indsæt venligst pris
 pricing;Pricing;Prissætning
+productActions;Product actions;Produkt aktioner
 productCreated;Product created;Produkt blev tilføjet
 productCopied;Product copied;Produkt blev kopieret
 productDeleted;Product deleted;Produkt blev slettet
