--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -61,7 +61,7 @@ date;Date;Dato
 delete;Delete;Slet
 deleteCategory;Delete category;Slet kategori
 deleted;deleted;slettet
-deleteOrReassignCategory;Delete or reassign associated products before deleting this category;Slet eller tildel produkter på ny, før du sletter denne kategori
+deleteOrReassignCategory;Cannot be deleted. Category has linked products;Kan ikke slettes. Kategori har tilknyttede produkter
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 description;Description;Beskrivelse
@@ -104,7 +104,8 @@ inactive;Inactive;Inaktiv
 invalidPassword;Invalid password;Ugyldig adgangskode
 invalidScheduledDateFormat;Invalid scheduled date format;Ugyldigt format for planlagt dato
 invalidUserData;Invalid user data;Ugyldig bruger data
-language;Language;Sprog
+items;items;stk
+itemsInStock;Items in stock;Antal på lager
 language;Language;Sprog
 loading;Loading;Loading
 lock;Lock;Hængelås
@@ -178,7 +179,8 @@ productNameRequired;Please insert product name;Indsæt venligst produktnavn
 productNotFound;Product not found;Produktet findes ikke
 productQuantity;Product quantity;Produkt antal
 products;Products;Produkter
-productsInStockNow;Products in stock now;Antal produkter på lager
+productsInStock;Products in stock;Antal produkter på lager
+productsInSubcategory;Products linked to subcategory;Produkter tilknyttet denne underkategori
 productStatus;Product status;Produkt status
 productUpdated;Product updated;Produkt blev opdateret
 productVariants;Product Variants;Produkt varianter
