--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -144,7 +144,7 @@ notVisibleInShop;is not visible in the shop until the main category is published
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 orange;Orange;Orange
 orders;Orders;Ordrer
-parentCategory;Parent category;Hovedkategori
+mainCategoryName;Parent category;Hovedkategori
 parentCategoryIs;Parent category is;Hovedkategori er
 password;Password;Adgangskode
 passwordDoNotMatch;The passwords do not match;Adgangskoderne stemmer ikke overens
