--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -69,6 +69,8 @@ desc;descending;faldende
 description;Description;Beskrivelse
 details;Details;Detaljer
 discount;Discount;Rabat
+discoverLatestTrends;Discover latest trends;Udforsk de nyeste tendenser
+discoverLatestTrendsAltText;A man playfully surprises a woman by covering her eyes from behinds.;En mand overrasker legende en kvinde ved at dække hendes øjne bagfra.
 edit;Edit;Opdater
 editCategory;Edit category;Opdater kategori
 editProduct;Edit product;Opdater produkt
