--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -219,6 +219,7 @@ shopMenLink;Shop men;Shop herre
 shopMenText;Premium materials and considered design. For the man who knows that calm is a kind of strength;Eksklusive materialer og gennemtænkt design. Til manden der forstår, at ro også er styrke
 shopNewHeading;Celebrating Life;Celebrating Life
 discoverCollection;Discover Collection;Se kollektionen
+shopCart;Shopping cart;Indkøbskurv
 shopNewText;Discover style made to move with your passions and celebrate what makes you unique;Opdag stil skabt til at følge dine passioner og hyld det, der gør dig unik
 shopNow;Shop now;Shop nu
 shopWomanHeading;Empower Your Everyday;Styrke i din stil
