arialabel for scheduled

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -267,6 +267,7 @@ userUpdated;User updated;Bruger opdateret
 view;View;Se
 viewCategory;View category;Se kategori
 viewProduct;View product;Se produkt
+viewScheduledDate;View scheduled date;Se planlagt dato
 warning;Warning;Warning
 welcome;Welcome;Velkommen
 white;White;Hvid
