--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -273,3 +273,9 @@ welcome;Welcome;Velkommen
 white;White;Hvid
 women;Women;Damer
 yellow;Yellow;Gul
+silver;Silver;Sølv
+silver;Silver;Sølv
+gold;Gold;Guld
+green;Green;Grøn
+blue;Blue;Blå
+pink;Pink;Pink
