--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -173,7 +173,8 @@ pleaseEnter;Please enter;Indsæt venligst
 pleaseEnterCategoryName;Please enter a name for category;Indsæt venligst navn på kategori
 pleaseEnterName;Please enter name;Indsæt venligst navn
 pleaseEnterPassword;Please enter password;Indsæt venligst adgangskode
-pleaseEnterSubCategoryName;Please enter a subcategory name;Indsæt venligst navn på underkategori
+pleaseEnterTranslationKey;Please enter a translation key;Indsæt venligst oversættelsesnøgle
+translationKey;Translation key;Oversættelsesnøgle
 pleaseEnterValidEmail;Please enter a valid email;Indsæt venligst en gyldig e-mail
 pleaseProvideScheduledDate;Please provide a scheduled date;Angiv venligst en planlagt dato
 pleaseSelectParentCategory;Please select parent category;Vælg venligst hovedkategori
