--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -174,7 +174,6 @@ pleaseEnterCategoryName;Please enter a name for category;Indsæt venligst navn p
 pleaseEnterName;Please enter name;Indsæt venligst navn
 pleaseEnterPassword;Please enter password;Indsæt venligst adgangskode
 pleaseEnterTranslationKey;Please enter a translation key;Indsæt venligst oversættelsesnøgle
-translationKey;Translation key;Oversættelsesnøgle
 pleaseEnterValidEmail;Please enter a valid email;Indsæt venligst en gyldig e-mail
 pleaseProvideScheduledDate;Please provide a scheduled date;Angiv venligst en planlagt dato
 pleaseSelectParentCategory;Please select parent category;Vælg venligst hovedkategori
@@ -254,6 +253,8 @@ success;Success;Succes
 sureToDelete;Are you sure that you want to delete;Er du sikker på at du vil slette
 title;Title;Titel
 totalProducts;Total products;Antal produkter
+translationKey;Translation key;Oversættelsesnøgle
+translationKeyHelpText;Enter the exact key used for translation in your CSV file;Skriv den præcise nøgle, som bruges til oversættelsen i din CSV-fil
 trashCan;Trash can;Skraldespand
 unknownError;Unknown error;Ukendt fejl
 unsupportedFile;is not supported type;er ikke understøttet
