--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -1,7 +1,7 @@
 ﻿key;en;da
 about;About;Profil
 accessories;Accessories;Accessories
-accessoriesAndToys;Accessories & toys;Accessories og legetøj
+accessoriesAndToys;Accessories & toys;Accessories & legetøj
 account;Account;Konto
 actionOnlyAllowedForAdmin;This action is only allowed for administrator;Denne handling er kun tilladt for administrator
 add;Add;Tilføj
