--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -108,6 +108,7 @@ grey;Grey;Grå
 grid;Grid;Grid
 gridLarge; Large grid;Bredt grid
 gridSmall; Small grid;Smalt grid
+hart;Hart;Hjerte
 heroText;Upgrade your wardrobe with exclusive deals!;Opgradér din garderobe med eksklusive tilbud!
 heroText1;For a limited time, enjoy incredible discounts on the latest fashion trends;I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends
 heroTitle;Exclusive Fashion Sale;Eksklusivt Modesalg
@@ -213,10 +214,13 @@ publishTime;Publish time;Udgivelsestidspunkt
 purple;Purple;Lilla
 qty;Qty;Antal
 red;Red;Rød
+removeFromFavorit;Remove  from favorite;Fjern fra favorit
 resetFiltersAndSorting;Reset filters and sorting;Nulstil filtre og sortering
 retry;Retry;Forsøg igen
 role;Role;Rolle
+sale;Sale;Udsalg
 save;Save;Gem
+saveAsFavorit;Save as favorite;Gem som favorit
 scheduled;Scheduled;Planlagt
 scheduledDate;Scheduled date;Planlagt dato
 scheduledDateMustBeFuture;Scheduled date must be after now;Planlagt dato skal være efter nu
