--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -108,7 +108,7 @@ grey;Grey;Grå
 grid;Grid;Grid
 gridLarge; Large grid;Bredt grid
 gridSmall; Small grid;Smalt grid
-hart;Hart;Hjerte
+heart;Heart;Hjerte
 heroText;Upgrade your wardrobe with exclusive deals!;Opgradér din garderobe med eksklusive tilbud!
 heroText1;For a limited time, enjoy incredible discounts on the latest fashion trends;I en begrænset periode kan du få fantastiske rabatter på de nyeste modetrends
 heroTitle;Exclusive Fashion Sale;Eksklusivt Modesalg
