arialabel required in icon content

--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -282,6 +282,7 @@ username;User name;Brugernavn
 users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
 view;View;Se
+viewCart;View cart;Se indkøbskurv
 viewAsGrid;View as grid;Gridvisning
 viewAsList;View as list;Listevisning
 viewCategory;View category;Se kategori
