--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -245,6 +245,7 @@ shopWomanLink;Shop Women;Shop dame
 shopWomanText;Find pieces that inspire self-expression—effortless, bold, and made to move with you;Udtryk dig selv med styles, der er ubesværede, modige og med dig i bevægelse
 showContent;Show content;Vis indhold
 showPassword;Show password;Vis adgangskode
+showAll;Show all;Vis alle
 showPrice;Show price;Vis pris
 signup;Sign up;Opret bruger
 signupFailed;Sign up failed;Registrering mislykkedes
