--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -54,7 +54,7 @@ contact;Contact;Kontakt
 copy;Copy;Kopier
 couldNotFindInfo;Sorry, We couldn’t find the information you’re looking for;Vi kunne desværre ikke finde den information, du søger
 countInStock;Items in stock;Antal på lager
-create;Create;Tilføj
+create;Create;Opret
 createAccount;Create account;Opret konto
 created;Created;Tilføjet
 createdAt;Created at;Tilføjet den
