--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -24,6 +24,7 @@ calendar;Calendar;Kalender
 cancel;Cancel;Annuller
 cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
 categories;Categories;Kategorier
+care;Care;vaskeanvisning
 category;Category;Kategori
 categoryAlreadyExist;Category already exist;Kategori findes allerede
 categoryCard;Category card;Kategori card
@@ -73,6 +74,8 @@ deleteCategory;Delete category;Slet kategori
 deleteProduct;Delete product;Slet produkt
 deleted;deleted;slettet
 deleteOrReassignCategory;Cannot be deleted. Category has linked products;Kan ikke slettes. Kategori har tilknyttede produkter
+delivery;Delivery;Levering
+deliveryText;We offer secure delivery with careful packaging. All orders are processed within 1–2 business days, and you'll receive a tracking link as soon as your order is shipped.;Vi tilbyder sikker levering med omhyggelig emballering. Alle ordrer behandles inden for 1-2 hverdage, og du modtager et trackinglink, så snart din ordre er afsendt.
 deleteUser;Delete user;Slet bruger
 desc;descending;faldende
 description;Description;Beskrivelse
@@ -137,6 +140,7 @@ main;Main;Primær
 mainCategoryName;Parent category;Hovedkategori
 mainSiteHeader;Main site;Primær site
 material;Material;Materiale
+materialAndCare;Material and care;Materiale and vaskeanvisning
 materialRequired;Please insert material;Indsæt venligst materiale
 maximumFileSize;Maximum file size;Maksimal filstørrelse
 men;Men;Mænd
@@ -174,6 +178,9 @@ passwordMinLength;Password should be at least 8 characters;Adgangskoden skal væ
 passwordNumber;Password should contain at least one number;Adgangskoden skal indeholde mindst ét tal
 passwordSymbol;Password should contain at least one special character;Adgangskoden skal indeholde mindst ét specialtegn
 passwordUppercase;Password should contain at least one uppercase letter;Adgangskoden skal indeholde mindst ét stort bogstav
+payment;Payment;Betaling
+paymentAndDelivery;Payment and delivery;Betaling og levering
+paymentText;You can pay by credit card or MobilePay. We only charge your payment once your order has been shipped;Betaling kan ske med kreditkort eller MobilePay. Vi trækker først beløbet, når din ordre er afsendt
 pensil;Pensil;Blyant
 pleaseEnter;Please enter;Indsæt venligst
 pleaseEnterCategoryName;Please enter a name for category;Indsæt venligst navn på kategori
