--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -24,7 +24,7 @@ calendar;Calendar;Kalender
 cancel;Cancel;Annuller
 cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
 categories;Categories;Kategorier
-care;Care;vaskeanvisning
+care;Care;Vaskeanvisning
 category;Category;Kategori
 categoryAlreadyExist;Category already exist;Kategori findes allerede
 categoryCard;Category card;Kategori card
@@ -84,6 +84,7 @@ discount;Discount;Rabat
 discoverCollection;Discover Collection;Se kollektionen
 discoverLatestTrends;Discover latest trends;Udforsk de nyeste tendenser
 discoverLatestTrendsAltText;A man playfully surprises a woman by covering her eyes from behinds.;En mand overrasker legende en kvinde ved at dække hendes øjne bagfra.
+doNotBleach;Do not bleach;Må ikke bleges
 edit;Edit;Opdater
 editCategory;Edit category;Opdater kategori
 editProduct;Edit product;Opdater produkt
@@ -139,6 +140,7 @@ logout;Log out;Log ud
 main;Main;Primær
 mainCategoryName;Parent category;Hovedkategori
 mainSiteHeader;Main site;Primær site
+machineWash;Machine wash at 40 °C;Maskinvask ved 40 °C
 material;Material;Materiale
 materialAndCare;Material and care;Materiale and vaskeanvisning
 materialRequired;Please insert material;Indsæt venligst materiale
@@ -166,6 +168,7 @@ notAuthorizedAdmin;Not authorized as an admin;Ikke autoriseret som admin
 notAuthorizedNoToken;Not authorized, no token;Ikke autoriseret, ingen token
 notAuthorizedTokenFailed;Not authorized, token failed;Ikke autoriseret, token mislykkedes
 notVisibleInShop;is not visible in the shop until the main category is published;bliver først synlig i shoppen, når hovedkategorien er udgivet
+noTumbleDry;Not suitable for tumble drying;Ikke egnet til tørretumbler
 noUser;User not found. Please sign up first;Bruger blev ikke fundet. Opret dig først
 orange;Orange;Orange
 orders;Orders;Ordrer
