--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -143,7 +143,7 @@ mainCategoryName;Parent category;Hovedkategori
 mainSiteHeader;Main site;Primær site
 machineWash;Machine wash at 40 °C;Maskinvask ved 40 °C
 material;Material;Materiale
-materialAndCare;Material and care;Materiale and vaskeanvisning
+materialAndCare;Material and care;Materiale og vaskeanvisning
 materialRequired;Please insert material;Indsæt venligst materiale
 maximumFileSize;Maximum file size;Maksimal filstørrelse
 man;Man;Mand
