--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -211,6 +211,7 @@ productCopied;Product copied;Produkt blev kopieret
 productCreated;Product created;Produkt blev tilføjet
 productDeleted;Product deleted;Produkt blev slettet
 productDescriptionRequired;Please insert product description;Indsæt venligst produktbeskrivelse
+productDisplay;Product Display;Produktvisning
 productImages;Product images;Produkt billeder
 productInformation;Product information;Produkt oplysninger
 productList;Product list;Produktliste
@@ -304,8 +305,6 @@ username;User name;Brugernavn
 users;Users;Brugere
 userUpdated;User updated;Bruger opdateret
 view;View;Se
-viewAsGrid;View as grid;Gridvisning
-viewAsList;View as list;Listevisning
 viewCart;View your cart;Se din indkøbskurv
 viewCategory;View category;Se kategori
 viewProduct;View product;Se produkt
