--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -19,7 +19,7 @@ blue;Blue;Blå
 brand;Brand;Mærke
 brandRequired;Please insert brand;Indsæt venligst mærke
 brown;Brown;Brun
-browseImages;Browse images;Vælg produkt billeder
+browseImages;Browse images;Tilføj produkt billeder
 calendar;Calendar;Kalender
 cancel;Cancel;Annuller
 cannotDeleteAdmin;This action is not allowed for admin;Admin bruger kan ikke slettes
