--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -284,7 +284,7 @@ subCategoryAlreadyExist;Subcategory already exists;Underkategori findes allerede
 subCategoryList;Subcategory list;Underkategori-liste
 subCategoryName;Subcategory name;Underkategori navn
 success;Success;Succes
-sureToDelete;Are you sure that you want to delete;Er du sikker på at du vil slette
+sureToDelete;Do you want to delete;Vil du slette
 title;Title;Titel
 totalProducts;Total products;Antal produkter
 translationKey;Translation key;Oversættelsesnøgle
