--- a/src/locales/translation.csv
+++ b/src/locales/translation.csv
@@ -214,6 +214,7 @@ preferences;Preferences;Præferencer
 price;Price;Pris
 priceRequired;Please insert price;Indsæt venligst pris
 pricing;Pricing;Prissætning
+product;Product;Produkt
 productActions;Product actions;Produkt aktioner
 productCard;Product card;Produkt card
 productCopied;Product copied;Produkt blev kopieret
